--- a/LESSON_4/LAB_4.3/style_2.css
+++ b/LESSON_4/LAB_4.3/style_2.css
@@ -5,7 +5,7 @@
     justify-content: center;
     font-family: Arial, Helvetica, sans-serif;
 }
-.parent_2 {
+.main {
     width: 1000px;
 }
 .child_2
